fixed overflow on view, moved drawer to project view, added background color

--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -1,3 +1,12 @@
+:root {
+    --background-color: linear-gradient(45deg, rgb(255, 245, 255), rgb(255, 245, 255))
+}
+
+body {
+    height: 100vh;
+    overflow: hidden;
+}
+
 /* navbar */
 .navbar {
     display: flex;
@@ -15,6 +24,7 @@
     width: 100%;
     display: flex;
     position: relative;
+    background: linear-gradient(45deg, rgb(255, 245, 255), rgb(255, 245, 255))
 }
 
 /* column */
